# PythonCICD

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.rst  TODO.md  cookiecutter.json  docker-compose.yaml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  python_cicd.html  search.html  searchindex.js  tests.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  python_cicd.doctree  tests.doctree
.github/workflows/: ci.yml  docs.yml  python-package.yml
_modules/: index.html
_modules/python_cicd/: math.html
_modules/tests/: test_math.html  test_python_cicd.html
_sources/: tests.rst.txt
docs/: modules.rst
python_cicd/: .gitignore  README.md  hello_world.py
python_cicd/tests/: test_python_cicd.py
tests/: test_math.py  test_python_cicd.py
{{cookiecutter.repo_name}}/: .dockerignore  .flake8  LICENSE  Makefile  README.md  run_tests.sh
{{cookiecutter.repo_name}}/.github/workflows/: ci.yml  docs.yml
{{cookiecutter.repo_name}}/docs/: conf.py  index.rst  python_cicd.rst
{{cookiecutter.repo_name}}/python_cicd/: math.py
{{cookiecutter.repo_name}}/tests/: test_math.py  test_python_cicd.py
