[tool.poetry]
name = "python_cicd"
version = "0.1.0"
description = "CICD on github"
authors = ["ashish.khatke"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
flake8 = "^6.0.0"
pytest = "^7.2"
pytest-cov = "^4.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
py_version = 310
profile = "black"
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["src", "tests"]
extend_skip = ["setup.py"]
known_third_party = ["poetry.core"]


[tool.black]
target-version = ['py310']
preview = true
force-exclude = '''
.*/setup\.py$
'''
